syntax = "proto3";

package user_service;

option go_package = "/user_service";

import "validate/validate.proto";

service UserService {
    rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message User {
    string id = 1;
    string email = 2;
    string username = 3;
    string password = 4;
    bool verified = 5;
    string role = 6;
    int64 createdAt = 7; // unix time
    int64 updatedAt = 8; // unit time
}

message GetUserByIdRequest {
    string userId = 1 [(validate.rules).string.min_len = 1];  // userId must not be empty
}

message GetUserByIdResponse {
    User user = 1;
}

message GetUserByEmailRequest {
    string email = 1 [(validate.rules).string.email = true];
}

message GetUserByEmailResponse {
    User user = 1;
}

message ListUsersRequest {
    int32 page = 1 [(validate.rules).int32.gte = 1];  // Page must be >= 1
    int32 pageSize = 2 [(validate.rules).int32.gte = 1];  // Page size must be >= 1
}

message ListUsersResponse {
    repeated User users = 1;
    int32 totalItems = 2;  // Total number of items
    int32 totalPages = 3;  // Total number of pages
}
